Add initial administration web integration
